Bug 297269 - dolphin shows wrong files after filter with filter-bar
Summary: dolphin shows wrong files after filter with filter-bar
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-01 22:24 UTC by Evstifeev Roman
Modified: 2012-04-05 14:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3
Sentry Crash Report:


Attachments
dolphin filters wrong file (17.67 KB, image/png)
2012-04-01 22:24 UTC, Evstifeev Roman
Details
test folder that causes buggy dolphin filter (262 bytes, application/x-gzip)
2012-04-02 11:37 UTC, Evstifeev Roman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Evstifeev Roman 2012-04-01 22:24:46 UTC
Created attachment 70063 [details]
dolphin filters wrong file

Dolphin on KDE 4.8.1 sometimes shows wrong files after applying simple filter with filter-bar
see attached screenshot
in fact: 
 directory contains 2 files, that match filter "colin":
 1) !7 Colin self - Other Women.mp3
 2) !7 Colin Self - Queens on Top (2 NICKI LUV SNICKI).wav
after typing "colin" on filter bar (see scrrenshot) dolphin shows wrong name for the first file in the main view, but(!) it shows right file name in the statusbar when i hover the mouse over this wrongly-named file. (on the screenshot at the bottom)
Comment 1 Peter Penz 2012-04-02 09:40:00 UTC
Thanks for the report, sadly I could not reproduce the issue yet. Would it be possible that you attach a directory where the issue is reproducible as zip-file? It seems your original directory contains mp3-files so attaching this won't be possible, however it would be sufficient having a "dummy-directory" with e.g. 10 entries. My guess is that the issue is only reproducible if the filtered items have a specific order. Thanks in advance!
Comment 2 Evstifeev Roman 2012-04-02 11:37:30 UTC
Created attachment 70077 [details]
test folder that causes buggy dolphin filter

i nailed down testcase to this file list:
##### test folder ####
0
1
2 a here
3
asd
asd2
#######
if i try to filter for "asd" in this folder - i got in the view two files named just "asd" (instead of asd and asd2)
Comment 3 Peter Penz 2012-04-02 11:56:14 UTC
Great, I could reproduce the issue with your small example! Thanks! I'll try to provide a fix for this during the next 2 weeks.
Comment 4 Peter Penz 2012-04-05 14:14:30 UTC
Git commit 633dd99f0c64db62e46d9a91a8b44e172d80d37e by Peter Penz.
Committed on 05/04/2012 at 16:12.
Pushed by ppenz into branch 'master'.

Fix filtering issue

When filtering items it might be possible that the update of
the widgets is wrong although the model internally has a correct
state.
FIXED-IN: 4.8.3

M  +9    -3    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/633dd99f0c64db62e46d9a91a8b44e172d80d37e
Comment 5 Peter Penz 2012-04-05 14:22:06 UTC
Git commit ed5f3aaba7149b3816909a403bbd9f3e06d1a774 by Peter Penz.
Committed on 05/04/2012 at 16:21.
Pushed by ppenz into branch 'KDE/4.8'.

Fix filtering issue

When filtering items it might be possible that the update of
the widgets is wrong although the model internally has a correct
state.
FIXED-IN: 4.8.3

M  +8    -2    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/ed5f3aaba7149b3816909a403bbd9f3e06d1a774